1.0.19
Move retry algorithm to Download-File

1.0.18
Issue #1556 DotNet Packages for ZipArchive missing in VS Code when creating a Base App
Issue #1559 Handling of Hungary artifacts
Issue #1563 Run-AlValidation with multiple apps fails
Run-AlValidation to support urls as apps, previousapps and installapps
Add parameter CopySymbolsFromContainer to Compile-AppInBcContainer to speed up symbols download
Use CopySymbolsFromContainer in Run-AlCops
Issue #1568 Add publisher parameter to Unpublish and Uninstall app
Issue #1566 Sign-BcContainerApp doesn't work with SHA256
Retry algorithm added to Sign-BcContainerApp
Add Parameter -doNotPublishAdminPort to Setup-TraefikContainerForBcContainers
Add Parameter -additionalParameters to Setup-TraefikContainerForBcContainers
Issue #1577 Run-AlValidation and Extract-AppFileToFolder require absolute paths
Issue #1579 Change default timeStampServer and digestAlgorithm

1.0.17
Issue #1494 Creating another container based on existing artifact
Add additional information when publishing through dev Endpoint (instead of just Unprocessible Entity)
Issue #1530 Not able to Run-AlValidation without previous app.
Issue #1537 Issue with file lock when creating image
Use configured containerName in Run-AlCops and Run-AlValidation
Add parameter -skipAppSourceCop to Run-AlValidation
Add mapCountryCode to $bcContainerHelperConfig
Use mapCountryCode in Get-BcArtifactUrl to allow getting artifacts for countries which doesn't have own artifacts
Use mapCountryCode in Run-AlValidation to allow running validation for all countries (max. 1 time per artifact)
Issue #1536 Random running Test failure
Run-AlValidation use single tenant containers by default for performance
Add resilience to ClientContext::GetAllForms
Issue #1550 and #1497 add digestAlgorithm parameter to Sign-BcContainerApp
Run-AlCops (and Run-AlValidation) could ignore error AS0088
Issue #1552 PowerShell sometimes uses 8-3 notation for $env:temp

1.0.16